; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/regulator/extr_twl4030-regulator.c_twl4030reg_write.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/regulator/extr_twl4030-regulator.c_twl4030reg_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.twlreg_info = type { i32 }

@TWL4030_MODULE_PM_RECEIVER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.twlreg_info*, i32, i32)* @twl4030reg_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @twl4030reg_write(%struct.twlreg_info* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.twlreg_info*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.twlreg_info* %0, %struct.twlreg_info** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @TWL4030_MODULE_PM_RECEIVER, align 4
  %8 = load i32, i32* %6, align 4
  %9 = load %struct.twlreg_info*, %struct.twlreg_info** %4, align 8
  %10 = getelementptr inbounds %struct.twlreg_info, %struct.twlreg_info* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* %5, align 4
  %13 = add i32 %11, %12
  %14 = call i32 @twl4030_i2c_write_u8(i32 %7, i32 %8, i32 %13)
  ret i32 %14
}

declare dso_local i32 @twl4030_i2c_write_u8(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
